# Attendance

./: .gitignore  CLAUDE.md  Makefile  README.md  Takshashila Attendance - C Glassmorphism.html  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_school_periods_and_classrooms.py  0003_password_reset_flag.py
backend/app/: main.py
backend/app/api/: admin.py  admin_edit.py  admin_users.py  at_risk.py  attendance.py  cic.py  executive.py  export.py  faculty.py  me.py  registrar.py  reports.py  student.py
backend/app/core/: auth.py  config.py  database.py
backend/app/models/: __init__.py  academic.py  attendance.py  audit.py  user.py
backend/app/schemas/: attendance.py  common.py
backend/app/services/: bulk_upload.py  csv_parser.py  device_service.py  geo_service.py  gotrue_admin.py  qr_service.py  user_provisioning.py
backend/scripts/: seed.py  seed_admin.py  seed_demo.py
docker/: init.sql  kong.yml
frontend/: .env.example  Dockerfile  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/reset-password/: page.tsx
frontend/src/components/admin/: bulk-upload-card.tsx  create-user-modal.tsx  credentials-reveal.tsx  download-csv-button.tsx  schools-list.tsx
frontend/src/components/attendance/: start-session-button.tsx
frontend/src/components/layout/: topbar.tsx
(+43 files in other folders)
